frontend/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*{
    margin: 0;
    padding: 0;
}
@layer base {
  input[type="number"]::-webkit-inner-spin-button,
  input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Space+Grotesk:wght@300..700&display=swap');
*{
  font-family: 'Space Grotesk', sans-serif;
}
.poppins{
  font-family: 'Poppins', sans-serif;
}
.oswald{
  font-family: 'Oswald', sans-serif;
}

body{
    --tw-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--tw-bg-opacity)) /* #000000 */;
}

.myborder{
    --tw-border-opacity: 0.2;
    border-color: rgb(255 255 255 / var(--tw-border-opacity));
    border-width: 1px;
}
.gradient-overlay {
  background: linear-gradient(to bottom, transparent, black);
  background-size: 100% 100%; /* Ensure it covers the element */
}
.gradient-overlay-reviews{
  
  background: linear-gradient(to left, black, transparent, black);
  background-size:100% 500% 100%; /* Controls the size of the gradient */
}
.overlay-gradient {
  background: linear-gradient(to top, transparent, black);
  background-size: 50% 100%; /* Ensure it covers the element */
}

/* Keyframe animation for the border */
@keyframes borderGlow {
  0% {
    border-color: #4E3262;
    box-shadow: 0 0 3px #4E3262;
  }
  50% {
    border-color: #875C3B;
    box-shadow: 0 0 6px #875C3B;
  }
  100% {
    border-color: #4E3262;
    box-shadow: 0 0 3px #4E3262;
  }
}

/* Animated border effect */
.border-animated {
  animation: borderGlow 2s infinite;
  border-style: dashed;
}

@keyframes slide {
  from {
    transform: translateY(0%);
  }
  to {
    transform: translateY(-50%);
  }
}

.vertical-slider {
  overflow: hidden;
  position: relative;
}

.slider-content {
  display: flex;
  flex-direction: column;
  gap: 12px;
  animation: slide 120s linear infinite reverse;
}

.reverse-slider-content{
  display: flex;
  flex-direction: column;
  gap: 12px;
  animation: slide 120s linear infinite;
}

.grad{
  background-image: linear-gradient(black ,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0),rgba(255, 255, 255, 0), rgba(255, 255, 255, 0),black );
}

